Enhance API schema compatibility and testing infrastructure
- Resolved critical schema mismatches in API models to align with the database schema.
- Restored API functionality with updated vote aggregation logic and pagination limits.
- Completed comprehensive testing with all 25 API tests passing.
- Improved documentation with a new DATABASE_SCHEMA.md detailing table structures and field mappings.
- Updated PROGRESS_LOG.md to reflect recent changes and project status.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
 
     # Database
     "sqlalchemy>=2.0.36",
+    "alembic>=1.13.0",
 
     # API framework
     "fastapi>=0.115.0",
@@ -118,7 +119,7 @@ ignore_missing_imports = true
 # Pytest configuration
 [tool.pytest.ini_options]
 minversion = "8.0"
-addopts = "-ra -q --strict-markers --cov=api --cov=scripts --cov-report=term-missing"
+addopts = "-ra -q --strict-markers"
 testpaths = ["tests"]
 pythonpath = ["."]
 
