Add endpoint to retrieve vote statistics by day of the week
- Introduced a new API endpoint `/stats/day-of-week` to provide vote counts grouped by day, supporting analysis of parliamentary voting patterns.
- Implemented filtering options for excluding budget-related votes and filtering by parliament and session numbers.
- Enhanced date handling for vote events, including percentage calculations for votes occurring Monday through Thursday.
- Updated `fetch_bill_xml.py` to handle date parsing with error logging for invalid formats, ensuring data integrity during bill updates.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,15 @@ wheels/
 *.sublime-workspace
 *.sublime-project
 
+# Frontend (Next.js)
+node_modules/
+.next/
+out/
+.next-env.d.ts
+.vercel/
+.swc/
+*.tsbuildinfo
+
 # Database
 *.db
 *.sqlite3
@@ -72,6 +81,24 @@ downloads/
 eggs/
 .eggs/
 lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+
+lib64/
+parts/
+sdist/
+var/
+wheels/
+
+lib64/
+parts/
+sdist/
+var/
+wheels/
+
 lib64/
 parts/
 sdist/
